src/main/java/com/example/test/error/ErrorExceptionHandler.java
package com.example.test.error;

public class ErrorExceptionHandler {
}